--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,13 @@
 </p>Role-playing wikis! <a class="internal-link" href="/about">About</a> page.</p>
+
+<p>
+	Build your own garden: <a href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">maximevaillancourt</a>
+</p>
+
+<p>
+	Back to <a href="http://francoalvarado.com">personal and author site</a>
+</p>
+
+<p>
+	Visit <a href="http://francopub.com">professional career site</a>
+</p>
