--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </p>Role-playing wikis! <a class="internal-link" href="/about">About</a> page.</p>
 
 <p>
-	Build your own garden: <a href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">maximevaillancourt</a>
+	Build your own garden: <a href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">maximevaillancourt's digital garden template for Jekyll-based sites</a>
 </p>
 
 <p>
