--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,6 @@
-</p>Role-playing wikis! <a class="internal-link" href="/about">About</a> page.</p>
-
-<p>
-	Build your own garden: <a href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">maximevaillancourt's digital garden template for Jekyll-based sites</a>
-</p>
-
-<p>
-	Back to <a href="http://francoalvarado.com">personal and author site</a>
-</p>
-
-<p>
-	Visit <a href="http://francopub.com">professional career site</a>
-</p>
+<ul>
+	<li>Role-playing wikis! <a class="internal-link" href="/about">About</a> page.</li>
+	<li>Build your own wiki or digital garden using <a href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">maximevaillancourt's digital garden template for Jekyll-based sites</a></li>
+	<li>Back to <a href="http://francoalvarado.com">personal and author site</a></li>
+	<li>Visit <a href="http://francopub.com">my professional career site</a></li>
+</ul>
