--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -40,7 +40,7 @@ layout: default
 </article>
 
 <hr>
-
+<!-- 
 <p>Here are all the notes in this wiki, along with their links, visualized as a graph.</p>
 
-{% include notes_graph.html %}
+{% include notes_graph.html %} -->
